# RLaunch

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  index.html  package-lock.json  package.json  vite.config.ts
.claude/: settings.json
.claude/hooks/: post-cargo-errors.ps1  session-start.ps1  stop-learnings-gate.ps1
assets/: builtin-themes.json
docs/: ARCHITECTURE.md  UX改善提案書.md  アプリ仕様書.md  ウィジェットの作り方.md  テーマの作り方.md  操作マニュアル.md  開発計画書.md
docs/mock/: index.html
docs/案/: UX改善提案書.md  UX改善提案書_Part2_マウス操作.md
rlaunch-iced/: Cargo.toml  README.md
rlaunch-iced/assets/: themes-bundled.json
rlaunch-iced/src/: app.rs  app_registration.rs  app_update.rs  app_windows.rs  lib.rs  main.rs
src/: App.css  App.tsx  app.rs  constants.ts  external.rs  folder-browser-main.tsx  folder-browser.html  group-edit-main.tsx  group-edit.html  group-popup-main.tsx  group-popup.html  main.tsx  settings-main.tsx  settings.html  tray.rs  widget-select-main.tsx  widget-select.html  widget-settings-main.tsx  widget-settings.html
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/resources/sample-themes/: cool-silver.json  cyberpunk.json  dracula.json  everforest.json  frosted.json  glass-light.json  glass.json  gruvbox-dark.json  high-contrast-light.json  high-contrast.json  monokai.json  nord.json  paper-white.json  rose-pine.json  soft-cream.json  solarized-dark.json  sunset.json  tokyo-night.json  wireframe.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: app_launcher.rs  audio.rs  desktop_hook.rs  file_info.rs  icon_extractor.rs  icon_library.rs  lnk_resolver.rs  mod.rs  system_info.rs  theme_manager.rs  widget_manager.rs
src/components/: ContextMenu.css  ContextMenu.tsx  CustomTitleBar.css  CustomTitleBar.tsx  FolderBrowser.css  FolderBrowserWindow.tsx  GroupEditWindow.tsx  GroupPopup.css  GroupPopupWindow.tsx  ItemEditDialog.css  ItemEditDialog.tsx  LauncherButton.tsx  LauncherGrid.css  LauncherGrid.tsx  LauncherList.css  LauncherList.tsx  SchemaFieldRenderer.tsx  SearchBar.css  SearchBar.tsx  SettingsWindow.css  SettingsWindow.tsx  TabBar.css  TabBar.tsx  TabSettingsDialog.css  TabSettingsDialog.tsx  WidgetSelectWindow.css  WidgetSelectWindow.tsx  WidgetSettingsWindow.css  WidgetSettingsWindow.tsx
src/hooks/: useAutoHide.ts  useChildTheme.ts  useChildWindow.ts  (+15 more)
tests/: legacy_data.rs
widget_scripts/: battery-level.js  binary-clock.js  breathing-guide.js  color-wheel.js  daily-quote.js  daylight-info.js  dice.js  dual-monitor.js  fps-counter.js  matrix-rain.js  moon-phase.js  network-status.js  particles.js  pomodoro.js  pulse-animation.js  quick-note.js  stopwatch.js  weather-icon.js  world-clock.js  year-progress.js
(+52 files in other folders)
