[package]
name = "rlaunch"
version = "0.1.0"
edition = "2021"
description = "CLaunch-style button launcher for Windows (iced rewrite)"
license = "MIT"

[dependencies]
# wgpu(GPU描画)を外し tiny-skia(ソフトウェア描画)のみにする。
# ランチャー用途では描画差は無く、GPUバッファ分のメモリ（100MB超）を節約できる。
iced = { version = "0.14", default-features = false, features = [
    "tiny-skia",
    "crisp",
    "thread-pool",
    "image",
    "svg",
    "tokio",
    "advanced",
] }
global-hotkey = "0.8"
tray-icon = "0.24"
auto-launch = "0.6"
rfd = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
image = "0.25"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
dirs = "6"
futures = "0.3"
log = "0.4"
env_logger = "0.11"

[dependencies.windows]
version = "0.62"
features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
    "Win32_UI_Shell_Common",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Graphics_Gdi",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_System_SystemServices",
    "Win32_Storage_FileSystem",
]

[profile.release]
lto = true
strip = true

[[bin]]
name = "rlaunch"
path = "src/main.rs"
